--- a/styles/style.css
+++ b/styles/style.css
@@ -297,6 +297,7 @@ header{
 .project-card {
   background-color: var(--color-projectCard-bg);
   width: 300px;
+  height: fit-content;
   border-radius: 15px;
   overflow: hidden;
   box-shadow: 0 4px 10px rgba(0,0,0,0.2);
@@ -306,7 +307,6 @@ header{
 }
 .project-card img {
   width: 100%;
-  height: 160px;
   object-fit: cover;
 }
 .project-content {
@@ -329,7 +329,7 @@ header{
 .project-btn {
   background-color: var(--color-title);
   color: var(--color-background-meduim);
-  padding: 8px 12px;
+  padding: 10px 12px;
   border-radius: 8px;
   font-weight: 600;
   text-decoration: none;
@@ -366,7 +366,7 @@ header{
 
 /* contact */
 #contact-us {
-  background-color: var(--color-background-meduim);
+  background-color: var(--color-background-dark);
   color: var(--color-white);
   width: 100%;
   min-height: 100vh;
@@ -441,7 +441,7 @@ form .form-btn:hover {
 
 /* footer */
 footer {
-  background-color: var(--color-background-dark);
+  background-color: var(--color-background-meduim);
   color: var(--color-white);
   width: 100%;
   text-align: center;
